# rusty-graph-federation

./: .gitignore  Cargo.toml  Justfile  README.md  default.nix
manifests/: discovery.yaml  feed.yaml  gateway.yaml  http-gateway.yaml  kustomization.yaml  namespace.yaml  profile.yaml  roles.yaml
manifests/discovery/: kustomization.yaml
manifests/nginx-gateway/: kustomization.yaml
manifests/services/: graphql-gateway.yaml  kustomization.yaml  profile.yaml
nix/: inputs.nix
services/discovery/: flake.nix
services/discovery/src/: main.rs
services/feed/: Cargo.toml  flake.nix
services/feed/src/: feed.rs  main.rs  query.rs
services/gateway/: flake.nix  package.json
services/gateway/src/: defs.ts  gateway.ts  main.ts
services/profile/: Cargo.toml  flake.nix
services/profile/src/: main.rs  query.rs  user.rs
services/rs-discovery/: Cargo.toml
services/rs-feed/: Cargo.toml
services/rs-feed/src/: query.rs
services/rs-profile/: flake.nix
services/rs-profile/src/: main.rs  query.rs
